ansible/k8s/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # The Init Container runs to completion BEFORE the main container starts
      containers:
      - name: backend
        image: roshnk8848/threetier-backend:0.0.1
        ports:
        - containerPort: 8000
        command: ["uvicorn"]
        args: ["app.main:app", "--host", "0.0.0.0", "--port", "8000"]
